# wolves_image_provider

./: .gitignore  CMakeLists.txt  README.md  guvcviewStarter.c  noauto.gpfl  package.xml
config/: camera_920_1080p.yaml  camera_amy.yaml  camera_davros_1080p.yaml  camera_rory.yaml  camera_settings.yaml  test_calibration.yaml
include/: CaptureV4L2.h
launch/: image_provider.launch  image_provider_v4l.launch
src/: CaptureV4L2.cpp  main.cpp
