<package format="2">
  <name>wolves_image_provider</name>
  <version>1.0.0</version>
  <description>The wolves_image_provider package, camera calibrations are placed in the config folder and need to be specified in the camera_settings.yaml (camera_name) configuration file.</description>

  <maintainer email="5guelden@informatik.uni-hamburg.de">Jasper Güldenstein</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <export>
    <bitbots_documentation>
      <language>c++</language>
      <status>unknown</status>
    </bitbots_documentation>
  </export>
</package>
